tests/bad/while_not_bool.ae
/// fail: Condition must be a boolean

def main() {
    while (0) {
    }
}